resolução de bugs e tudo no mesmo rep

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -11,7 +11,7 @@
   <h1>Dash SKin Search</h1>
   <h2>By: Luciano655dev</h2>
 
-  <form action="/form" method="GET">
+  <form action="/" method="GET">
     <input type="text" name="weaponName" placeholder="weaponName" required>
     <input type="text" name="skinName" placeholder="skinName" required>
     <input type="text" name="lowestPrice" placeholder="lowestPrice" required>
